# chaumstar

./: .dockerignore  .gitignore  CRYPTO.md  Cargo.toml  DEMO.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  fly.toml
crates/chaumstar-core/: Cargo.toml
crates/chaumstar-core/src/: attrs.rs  credential.rs  error.rs  flow.rs  internal.rs  issuer.rs  keyset.rs  lib.rs  payload.rs  registry.rs  transparency.rs
crates/chaumstar-core/tests/: scenario.rs  serde.rs
crates/chaumstar-server/: Cargo.toml
crates/chaumstar-server/src/: error.rs  lib.rs  main.rs  state.rs
crates/chaumstar-server/src/routes/: health.rs  keysets.rs  mints.rs  mod.rs  reviews.rs  transparency.rs
crates/chaumstar-server/tests/: api.rs
crates/chaumstar-wasm/: Cargo.toml
crates/chaumstar-wasm/src/: lib.rs
web/: README.md  package.json  svelte.config.js  vite.config.ts
web/mockups/: calm.html
web/src/: app.css  app.html
web/src/lib/: anim.ts  api.ts  types.ts  wasm.ts
web/src/lib/components/: Term.svelte  Terminal.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/alice/: +page.svelte
web/src/routes/bob/: +page.svelte
web/src/routes/cafe/: +page.svelte
web/src/routes/eve/: +page.svelte
