[workspace]
resolver = "2"
members = [
    "crates/chaumstar-core",
    "crates/chaumstar-server",
    "crates/chaumstar-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["chaumstar contributors"]
repository = "https://github.com/hide-yoshi/chaumstar"

[workspace.dependencies]
chaumstar-core = { path = "crates/chaumstar-core" }

# Crypto
zkryptium = { version = "0.6", default-features = false, features = ["bbsplus", "bbsplus_blind"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
hex = "0.4"

# Error handling
thiserror = "2"

# Async / web
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
