[package]
name = "chaumstar-core"
description = "Core crypto + protocol types for chaumstar (anonymous verifiable reviews)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
zkryptium.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_jcs.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
