[package]
name = "chaumstar-wasm"
description = "WebAssembly bindings for chaumstar wallet + verifier (browser)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chaumstar-core.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
